@@ -1,3 +1,9 @@
+2019-02-17  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Add right pointer button context popups to the file dialog, with
+	keyboard shortcuts, that implement simple file maintenance - delete
+	and rename subdirectories and files, create new subdirectories.
+
 2019-02-16  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* dialog_handler.C: Modal dialogs set _NET_WM_STATE to modal.
